# random-fu-multivariate

./: LICENSE  README.md  nixpkgs.nix  random-fu-multivariate.cabal  stack.yaml
src/: MultivariateNormal.hs
src/Data/Random/Distribution/: MultiNormal.hs  MultivariateNormal.hs
src/Data/Random/Distribution/Static/: MultivariateNormal.hs
