name:                random-fu-multivariate
version:             0.1.0.0
synopsis:            Multivariate distributions for random-fu
description:         Please see README.md
homepage:            https://github.com/idontgetoutmuch/random-fu-multivariate#readme
license:             BSD3
license-file:        LICENSE
author:              Dominic Steinitz
maintainer:          dominic@steinitz.org
copyright:           2016 Dominic Steinitz
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Random.Distribution.MultivariateNormal
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite random-fu-multivariate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , random-fu-multivariate
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/random-fu-multivariate
